Set default color for chat.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">@color/color_main</color>
     <color name="colorAccent">@color/color_main</color>
 
-    <color name="color_main">#9575cd</color>
+    <color name="color_main">#ED3300</color>
 
 </resources>
