--- a/chat/src/main/res/layout/item_user_message.xml
+++ b/chat/src/main/res/layout/item_user_message.xml
@@ -23,7 +23,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
+        android:gravity="center"
         android:layout_marginTop="4dp"
+        android:drawablePadding="4dp"
         />
 
 </LinearLayout>
