--- a/chat/src/main/res/layout/view_chat.xml
+++ b/chat/src/main/res/layout/view_chat.xml
@@ -7,21 +7,34 @@
     android:layout_height="match_parent"
     android:background="#fff">
 
+<!--    <TextView-->
+<!--        android:id="@+id/title"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        />-->
+
     <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:id="@+id/warning"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="15dp"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textFontWeight="400"
         />
 
     <View
         android:id="@+id/upper_limiter"
         android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_below="@+id/title"
-        android:layout_marginTop="16dp"
+        android:layout_height="2dp"
+        android:layout_below="@+id/warning"
         />
 
 
@@ -39,7 +52,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Пожалуйста, представьтесь"
-            android:textColor="@color/gray"
             android:textSize="18sp"
             android:gravity="center"
             android:layout_gravity="center"
@@ -113,7 +125,6 @@
         android:layout_height="match_parent"
         android:layout_below="@id/upper_limiter"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
         android:visibility="gone">
 
 
@@ -121,22 +132,30 @@
             android:id="@+id/list_with_message"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_centerHorizontal="true"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:layout_marginBottom="16dp"
+            android:layout_above="@id/company_name"
+            />
+
+        <TextView
+            android:id="@+id/company_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="by CraftTalk"
+            android:gravity="right"
             android:layout_above="@id/lower_limit"
+            android:paddingEnd="5dp"
+            android:layout_marginBottom="16dp"
+            android:fontFamily="@font/ubuntu_medium"
+            android:textFontWeight="700"
             />
 
         <View
             android:id="@+id/lower_limit"
             android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:layout_marginBottom="8dp"
+            android:layout_height="2dp"
             android:layout_above="@id/layout_with_active_element_entry_field"
             />
-
 
 
         <RelativeLayout
@@ -149,26 +168,26 @@
                 android:id="@+id/entry_field"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#000"
                 android:hint="Введите сообщение..."
                 android:inputType="textMultiLine"
                 android:maxHeight="@dimen/max_height_entry_field_message"
+                android:minHeight="38dp"
                 android:layout_toStartOf="@id/send_message"
+                android:paddingStart="15dp"
+                android:paddingTop="12dp"
+                android:paddingBottom="2dp"
                 android:background="@null"
-                android:paddingBottom="8dp"
-                android:layout_centerVertical="true"
-                android:paddingStart="8dp"
                 />
 
             <ImageView
                 android:id="@+id/send_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_send"
-
+                android:src="@drawable/ic_attach_file"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:padding="8dp"
+                android:padding="12dp"
+                android:rotation="45"
                 />
 
 <!--            <ImageView-->
