--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.crafttalk.chat.ui.view.ChatView
-        android:id="@+id/chat_view"
-        android:layout_height="match_parent"
+    <FrameLayout
+        android:id="@+id/fl_content"
         android:layout_width="match_parent"
-        app:title_color="#65499c"
-        app:title_size="25sp"
-        app:title_text="Sample chat"
-        app:main_color="@color/color_main"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_navigation"
         />
 
-</LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_main"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
+        app:menu="@menu/navigation_items"
+        android:layout_alignParentBottom="true"/>
+
+</RelativeLayout>
