--- a/chat/src/main/res/drawable/background_item_action.xml
+++ b/chat/src/main/res/drawable/background_item_action.xml
@@ -3,8 +3,8 @@
 
     <item android:top="-2dp" >
         <shape android:shape="rectangle">
-            <solid android:color="#fff"/>
-            <stroke android:color="@color/gray" android:width="1dp"/>
+            <solid android:color="@color/default_color_bg_server_action"/>
+            <stroke android:color="@color/default_color_borders_server_action" android:width="1dp"/>
         </shape>
     </item>
 
