--- a/chat/src/main/res/drawable/background_single_item_action.xml
+++ b/chat/src/main/res/drawable/background_single_item_action.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#fff"/>
-    <stroke android:color="@color/gray" android:width="1dp"/>
+    <solid android:color="@color/default_color_bg_server_action"/>
+    <stroke android:color="@color/default_color_borders_server_action" android:width="1dp"/>
     <corners android:radius="5dp"/>
 
 </shape>
