--- a/chat/src/main/res/layout/item_server_message.xml
+++ b/chat/src/main/res/layout/item_server_message.xml
@@ -4,8 +4,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp">
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp">
 
     <TextView
         android:id="@+id/server_message"
@@ -14,15 +16,19 @@
         android:gravity="left"
         android:layout_gravity="left"
         android:background="@drawable/background_item_simple_server_message"
-        android:padding="@dimen/padding_message"
-        android:textColor="#000"
+        android:paddingStart="15dp"
+        android:paddingTop="13dp"
+        android:paddingEnd="13dp"
+        android:paddingBottom="13dp"
+        android:fontFamily="@font/ubuntu_light"
+        android:textFontWeight="300"
         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/actions_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         android:nestedScrollingEnabled="true"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />
@@ -32,6 +38,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="10dp"
+        android:drawablePadding="8dp"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textFontWeight="600"
         />
+
 </LinearLayout>
