--- a/chat/src/main/res/layout/item_user_message.xml
+++ b/chat/src/main/res/layout/item_user_message.xml
@@ -4,8 +4,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp">
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp">
 
     <TextView
         android:id="@+id/user_message"
@@ -13,9 +15,13 @@
         android:layout_height="wrap_content"
         android:gravity="right"
         android:layout_gravity="right"
-        android:textColor="#fff"
-        android:padding="@dimen/padding_message"
+        android:paddingStart="15dp"
+        android:paddingTop="13dp"
+        android:paddingEnd="13dp"
+        android:paddingBottom="13dp"
         android:background="@drawable/background_item_simple_user_message"
+        android:fontFamily="@font/ubuntu_light"
+        android:textFontWeight="300"
         />
 
     <TextView
@@ -24,8 +30,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:gravity="center"
-        android:layout_marginTop="4dp"
-        android:drawablePadding="4dp"
+        android:layout_marginTop="6dp"
+        android:drawablePadding="5dp"
+        android:paddingEnd="5dp"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textFontWeight="600"
         />
 
 </LinearLayout>
