--- a/chat/src/main/res/values/attrs.xml
+++ b/chat/src/main/res/values/attrs.xml
@@ -3,11 +3,28 @@
 
     <declare-styleable name="ChatView">
 
+        <attr name="color_main" format="color"/>
+        <attr name="color_title" format="color"/>
+        <attr name="color_bg_user_message" format="color"/>
+        <attr name="color_bg_server_message" format="color"/>
+        <attr name="color_bg_server_action" format="color"/>
+        <attr name="color_borders_server_action" format="color"/>
+        <attr name="color_text_user_message" format="color"/>
+        <attr name="color_text_server_message" format="color"/>
+        <attr name="color_text_server_action" format="color"/>
+        <attr name="color_time_mark" format="color"/>
+        <attr name="color_text_warning" format="color"/>
+        <attr name="color_company" format="color"/>
+
         <attr name="title_text" format="string" />
-        <attr name="title_color" format="color"/>
-        <attr name="title_size" format="dimension"/>
-        <attr name="main_color" format="color"/>
-        <attr name="text_message_size" format="dimension"></attr>
+
+        <attr name="size_title" format="dimension"/>
+        <attr name="size_user_message" format="dimension"/>
+        <attr name="size_server_message" format="dimension"/>
+        <attr name="size_server_action" format="dimension"/>
+        <attr name="size_time_mark" format="dimension"/>
+        <attr name="size_warning" format="dimension"/>
+        <attr name="size_company" format="dimension"/>
 
     </declare-styleable>
 
