--- a/chat/src/main/res/values/dimens.xml
+++ b/chat/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
 <resources>
     <dimen name="padding_message">8dp</dimen>
     <dimen name="max_height_entry_field_message">100dp</dimen>
+
+    <dimen name="default_size_title">20sp</dimen>
+    <dimen name="default_size_user_message">14sp</dimen>
+    <dimen name="default_size_server_message">14sp</dimen>
+    <dimen name="default_size_server_action">14sp</dimen>
+    <dimen name="default_size_time_mark">12sp</dimen>
+    <dimen name="default_size_warning">18sp</dimen>
+    <dimen name="default_size_company">12sp</dimen>
+
 </resources>
