--- a/chat/src/main/res/layout/item_server_image_message.xml
+++ b/chat/src/main/res/layout/item_server_image_message.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,29 +9,24 @@
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp">
 
-    <TextView
-        android:id="@+id/server_message"
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left"
-        android:layout_gravity="left"
         android:background="@drawable/background_item_simple_server_message"
         android:paddingStart="15dp"
         android:paddingTop="13dp"
         android:paddingEnd="13dp"
         android:paddingBottom="13dp"
-        android:fontFamily="@font/ubuntu_light"
-        android:textFontWeight="300"
-        />
+        android:layout_gravity="left">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/actions_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:nestedScrollingEnabled="true"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        />
+        <ImageView
+            android:id="@+id/server_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+    </FrameLayout>
+
 
     <TextView
         android:id="@+id/time"
