--- a/chat/src/main/res/layout/view_chat.xml
+++ b/chat/src/main/res/layout/view_chat.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff">
+    android:background="#fff"
+    android:id="@+id/chat_layout">
 
 <!--    <TextView-->
 <!--        android:id="@+id/title"-->
@@ -127,7 +128,6 @@
         android:layout_centerHorizontal="true"
         android:visibility="gone">
 
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_with_message"
             android:layout_width="match_parent"
@@ -135,6 +135,7 @@
             android:layout_centerHorizontal="true"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_above="@id/company_name"
+            app:stackFromEnd="true"
             />
 
         <TextView
@@ -154,64 +155,16 @@
             android:id="@+id/lower_limit"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_above="@id/layout_with_active_element_entry_field"
+            android:layout_above="@id/fragment_entry_field"
             />
 
-
-        <RelativeLayout
-            android:id="@+id/layout_with_active_element_entry_field"
-            android:layout_width="wrap_content"
+        <fragment
+            android:id="@+id/fragment_entry_field"
+            class="com.crafttalk.chat.ui.chat_view.EntryFieldFragment"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true">
-
-            <EditText
-                android:id="@+id/entry_field"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Введите сообщение..."
-                android:inputType="textMultiLine"
-                android:maxHeight="@dimen/max_height_entry_field_message"
-                android:minHeight="38dp"
-                android:layout_toStartOf="@id/send_message"
-                android:paddingStart="15dp"
-                android:paddingTop="12dp"
-                android:paddingBottom="2dp"
-                android:background="@null"
-                />
-
-            <ImageView
-                android:id="@+id/send_message"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_attach_file"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:padding="12dp"
-                android:rotation="45"
-                />
-
-<!--            <ImageView-->
-<!--                android:id="@+id/like"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:src="@drawable/ic_like"-->
-<!--                android:padding="4dp"-->
-<!--                android:layout_toStartOf="@id/attach_file"-->
-<!--                android:layout_centerVertical="true"-->
-<!--                />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/attach_file"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:src="@drawable/ic_attach_file"-->
-<!--                android:padding="4dp"-->
-<!--                android:rotation="45"-->
-<!--                android:layout_alignParentEnd="true"-->
-<!--                android:layout_centerVertical="true"-->
-<!--                />-->
-
-        </RelativeLayout>
+            android:layout_alignParentBottom="true"
+            />
 
     </RelativeLayout>
 
