--- a/chat/src/main/res/values/colors.xml
+++ b/chat/src/main/res/values/colors.xml
@@ -9,8 +9,8 @@
     <color name="default_color_borders_server_action">#ddd</color>
     <color name="default_color_bg_server_action">#fff</color>
 
+    <color name="default_color_text_server_message">#000</color>
     <color name="default_color_text_user_message">#000</color>
-    <string name="default_color_text_server_message">#000</string>
     <color name="default_color_text_server_action">@color/default_color_main</color>
     <color name="default_color_text_warning">#2C2C2C</color>
 
