--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -9,14 +9,11 @@
         android:id="@+id/chat_view"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        app:color_title="#65499c"
-        app:title_text="Sample chat"
         app:color_main="@color/color_main"
         app:color_bg_user_message="@color/color_main"
         app:color_text_server_action="@color/color_main"
         app:color_text_user_message="#fff"
-        app:auth_with_hash="true"
-        app:auth_with_form="true"
+        app:auth="AUTH_WITHOUT_FORM_WITH_HASH"
         />
 
 </LinearLayout>
