add support english language

--- a/chat/src/main/res/layout/auth_layout.xml
+++ b/chat/src/main/res/layout/auth_layout.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Пожалуйста, представьтесь"
+        android:text="@string/auth_user_introduction"
         android:textSize="18sp"
         android:gravity="center"
         android:layout_gravity="center"
@@ -21,7 +21,7 @@
         android:id="@+id/first_name_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Ваше имя"
+        android:hint="@string/auth_user_first_name"
         android:textSize="16sp"
         android:textColor="#000"
         android:inputType="text"
@@ -36,7 +36,7 @@
         android:id="@+id/last_name_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Ваша фамилия"
+        android:hint="@string/auth_user_surname_name"
         android:textSize="16sp"
         android:textColor="#000"
         android:inputType="text"
@@ -51,7 +51,7 @@
         android:id="@+id/phone_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Ваш номер телефона"
+        android:hint="@string/auth_user_phone"
         android:textSize="16sp"
         android:textColor="#000"
         android:inputType="phone"
@@ -66,7 +66,7 @@
         android:id="@+id/sign_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Начать чат"
+        android:text="@string/auth_sign_in"
         android:textSize="14sp"
         android:textColor="#fff"
         android:gravity="center"
