--- a/chat/src/main/res/layout/chat_layout.xml
+++ b/chat/src/main/res/layout/chat_layout.xml
@@ -22,7 +22,7 @@
         android:id="@+id/company_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="by CraftTalk"
+        android:text="@string/chat_name_company"
         android:gravity="right"
         android:layout_above="@id/lower_limit"
         android:paddingEnd="5dp"
@@ -48,7 +48,7 @@
             android:id="@+id/entry_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Введите сообщение..."
+            android:hint="@string/chat_entry_field_hint"
             android:inputType="textMultiLine"
             android:maxHeight="@dimen/max_height_entry_field_message"
             android:minHeight="38dp"
