--- a/chat/src/main/res/layout/view_host.xml
+++ b/chat/src/main/res/layout/view_host.xml
@@ -8,16 +8,16 @@
     android:background="#fff"
     android:id="@+id/chat_layout">
 
-    <!--    <TextView-->
-    <!--        android:id="@+id/title"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_gravity="center"-->
-    <!--        android:layout_centerHorizontal="true"-->
-    <!--        android:layout_marginTop="16dp"-->
-    <!--        android:layout_marginStart="16dp"-->
-    <!--        android:layout_marginEnd="16dp"-->
-    <!--        />-->
+<!--    <TextView-->
+<!--        android:id="@+id/title"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        />-->
 
     <TextView
         android:id="@+id/warning"
@@ -27,6 +27,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="15dp"
+        android:text="@string/chat_internet_connection_warning"
         android:fontFamily="@font/ubuntu_regular"
         android:textFontWeight="400"
         />
