--- a/chat/src/main/res/layout/view_host.xml
+++ b/chat/src/main/res/layout/view_host.xml
@@ -29,6 +29,7 @@
         android:text="@string/chat_internet_connection_warning"
         android:fontFamily="@font/ubuntu_regular"
         android:textFontWeight="400"
+        android:visibility="invisible"
         />
 
     <View
