--- a/chat/src/main/res/layout/chat_layout.xml
+++ b/chat/src/main/res/layout/chat_layout.xml
@@ -14,22 +14,43 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_above="@id/company_name"
+        android:layout_above="@id/info_layout"
         app:stackFromEnd="true"
         />
 
-    <TextView
-        android:id="@+id/company_name"
+    <RelativeLayout
+        android:id="@+id/info_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/chat_name_company"
-        android:gravity="right"
-        android:layout_above="@id/lower_limit"
-        android:paddingEnd="5dp"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="@font/ubuntu_medium"
-        android:textFontWeight="700"
-        />
+        android:layout_above="@id/lower_limit">
+
+        <TextView
+            android:id="@+id/state_action_operator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chat_state_action_operator"
+            android:paddingStart="8dp"
+            android:layout_marginBottom="16dp"
+            android:fontFamily="@font/ubuntu_medium"
+            android:textFontWeight="700"
+            android:layout_alignParentStart="true"
+            android:visibility="gone"
+            />
+
+        <TextView
+            android:id="@+id/company_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chat_name_company"
+            android:gravity="right"
+            android:paddingEnd="8dp"
+            android:layout_marginBottom="16dp"
+            android:fontFamily="@font/ubuntu_medium"
+            android:textFontWeight="700"
+            android:layout_alignParentEnd="true"
+            />
+
+    </RelativeLayout>
 
     <View
         android:id="@+id/lower_limit"
