--- a/chat/src/main/res/layout/bottom_sheet_show_gif.xml
+++ b/chat/src/main/res/layout/bottom_sheet_show_gif.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <com.github.chrisbanes.photoview.PhotoView
-        android:id="@+id/image_show"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
@@ -15,11 +11,16 @@
         android:background="@color/black_translucent">
 
         <ImageView
-            android:id="@+id/image_navigate_back"
+            android:id="@+id/gif_navigate_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_arrow_back" />
 
     </androidx.appcompat.widget.Toolbar>
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/gif_show"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
