--- a/chat/src/main/res/layout/item_server_image_message.xml
+++ b/chat/src/main/res/layout/item_server_image_message.xml
@@ -22,11 +22,9 @@
         <ImageView
             android:id="@+id/server_image"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
 
     </FrameLayout>
-
 
     <TextView
         android:id="@+id/time"
@@ -36,7 +34,6 @@
         android:layout_marginTop="10dp"
         android:drawablePadding="8dp"
         android:fontFamily="@font/ubuntu_regular"
-        android:textFontWeight="600"
-        />
+        android:textFontWeight="600" />
 
 </LinearLayout>
