--- a/chat/src/main/res/layout/item_server_file_message.xml
+++ b/chat/src/main/res/layout/item_server_file_message.xml
@@ -13,21 +13,18 @@
         android:id="@+id/server_file"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_gravity="left"
-        android:src="@drawable/ic_file"
-        />
+        android:layout_gravity="start"
+        android:src="@drawable/ic_file" />
 
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:gravity="center"
-        android:layout_marginTop="6dp"
-        android:drawablePadding="5dp"
-        android:paddingEnd="5dp"
+        android:layout_gravity="start"
+        android:gravity="center_vertical"
+        android:layout_marginTop="10dp"
+        android:drawablePadding="8dp"
         android:fontFamily="@font/ubuntu_regular"
-        android:textFontWeight="600"
-        />
+        android:textFontWeight="600" />
 
 </LinearLayout>
