--- a/chat/src/main/res/layout/item_server_image_message.xml
+++ b/chat/src/main/res/layout/item_server_image_message.xml
@@ -17,7 +17,7 @@
         android:paddingTop="13dp"
         android:paddingEnd="13dp"
         android:paddingBottom="13dp"
-        android:layout_gravity="left">
+        android:layout_gravity="start">
 
         <ImageView
             android:id="@+id/server_image"
@@ -30,7 +30,8 @@
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
+        android:gravity="center_vertical"
         android:layout_marginTop="10dp"
         android:drawablePadding="8dp"
         android:fontFamily="@font/ubuntu_regular"
