--- a/chat/src/main/res/layout/item_user_text_message.xml
+++ b/chat/src/main/res/layout/item_user_text_message.xml
@@ -13,28 +13,25 @@
         android:id="@+id/user_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        android:layout_gravity="right"
+        android:gravity="end"
+        android:layout_gravity="end"
         android:paddingStart="15dp"
         android:paddingTop="13dp"
         android:paddingEnd="13dp"
         android:paddingBottom="13dp"
         android:background="@drawable/background_item_simple_user_message"
         android:fontFamily="@font/ubuntu_light"
-        android:textFontWeight="300"
-        />
+        android:textFontWeight="300" />
 
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:gravity="center"
-        android:layout_marginTop="6dp"
-        android:drawablePadding="5dp"
-        android:paddingEnd="5dp"
+        android:layout_gravity="end"
+        android:gravity="center_vertical"
+        android:layout_marginTop="10dp"
+        android:drawablePadding="8dp"
         android:fontFamily="@font/ubuntu_regular"
-        android:textFontWeight="600"
-        />
+        android:textFontWeight="600" />
 
 </LinearLayout>
