Added default ChatPermissionListener

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -17,7 +17,6 @@
         app:urlSocketHost="@string/urlSocketHost"
         app:urlSocketNameSpace="@string/urlSocketNameSpace"
         app:urlUploadHost="@string/urlUploadHost"
-        app:urlUploadNameSpace="@string/urlUploadNameSpace"
-        />
+        app:urlUploadNameSpace="@string/urlUploadNameSpace" />
 
 </LinearLayout>
