--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -13,7 +13,7 @@
         app:color_bg_user_message="@color/color_main"
         app:color_text_server_action="@color/color_main"
         app:color_text_user_message="#fff"
-        app:auth="AUTH_WITHOUT_FORM_WITH_HASH"
+        app:auth="AUTH_WITHOUT_FORM"
         app:urlSocketHost="@string/urlSocketHost"
         app:urlSocketNameSpace="@string/urlSocketNameSpace"
         app:urlUploadHost="@string/urlUploadHost"
