Added processing timeout, hide status. Added warning screen. Added customization of progress bars.

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -13,7 +13,9 @@
         app:color_bg_user_message="@color/color_main"
         app:color_text_server_action="@color/color_main"
         app:color_text_user_message="#fff"
+        app:progressIndeterminateDrawable="@drawable/spinner"
         app:auth="AUTH_WITHOUT_FORM"
+        app:timeDelayed="1000"
         app:urlSocketHost="@string/urlSocketHost"
         app:urlSocketNameSpace="@string/urlSocketNameSpace"
         app:urlUploadHost="@string/urlUploadHost"
