--- a/chat/src/main/res/values/attrs.xml
+++ b/chat/src/main/res/values/attrs.xml
@@ -7,7 +7,7 @@
             <enum name="AUTH_WITH_FORM" value="0"/>
             <enum name="AUTH_WITHOUT_FORM" value="1"/>
         </attr>
-
+        <attr name="timeDelayed" format="integer"/>
         <attr name="urlSocketNameSpace" format="string"/>
         <attr name="urlSocketHost" format="string"/>
         <attr name="urlUploadNameSpace" format="string"/>
@@ -24,6 +24,8 @@
         <attr name="color_time_mark" format="color"/>
         <attr name="color_text_warning" format="color"/>
         <attr name="color_company" format="color"/>
+
+        <attr name="progressIndeterminateDrawable" format="reference"/>
 
         <attr name="size_user_message" format="dimension"/>
         <attr name="size_server_message" format="dimension"/>
