--- a/chat/src/main/res/values/attrs.xml
+++ b/chat/src/main/res/values/attrs.xml
@@ -34,6 +34,9 @@
         <attr name="size_warning" format="dimension"/>
         <attr name="size_company" format="dimension"/>
 
+        <attr name="company_name" format="string"/>
+        <attr name="show_company_name" format="boolean"/>
+        
     </declare-styleable>
 
 </resources>
