--- a/chat/src/main/res/layout/item_server_image_message.xml
+++ b/chat/src/main/res/layout/item_server_image_message.xml
@@ -13,16 +13,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/background_item_simple_server_message"
-        android:paddingStart="15dp"
-        android:paddingTop="13dp"
-        android:paddingEnd="13dp"
-        android:paddingBottom="13dp"
         android:layout_gravity="start">
 
         <ImageView
             android:id="@+id/server_image"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingStart="15dp"
+            android:paddingTop="13dp"
+            android:paddingEnd="13dp"
+            android:paddingBottom="13dp"
+            android:visibility="gone" />
 
     </FrameLayout>
 
@@ -35,6 +36,7 @@
         android:layout_marginTop="10dp"
         android:drawablePadding="8dp"
         android:fontFamily="@font/ubuntu_regular"
-        android:textFontWeight="600" />
+        android:textFontWeight="600"
+        android:visibility="gone" />
 
 </LinearLayout>
