Added support date mark in chat

--- a/chat/src/main/res/layout/item_user_file_message.xml
+++ b/chat/src/main/res/layout/item_user_file_message.xml
@@ -9,6 +9,11 @@
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp">
 
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/item_date_message" />
+
     <ImageView
         android:id="@+id/user_file"
         android:layout_width="0dp"
