--- a/chat/src/main/res/layout/item_server_union_message.xml
+++ b/chat/src/main/res/layout/item_server_union_message.xml
@@ -10,6 +10,11 @@
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp">
 
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/item_date_message" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
