--- a/chat/src/main/res/values/colors.xml
+++ b/chat/src/main/res/values/colors.xml
@@ -14,8 +14,8 @@
     <color name="default_color_text_server_action">@color/default_color_main</color>
     <color name="default_color_text_warning">#2C2C2C</color>
 
+    <color name="default_color_info">#AEB0B0</color>
     <color name="default_color_time_mark">#AEB0B0</color>
-    <color name="default_color_company">#AEB0B0</color>
 
     <color name="gray">#ddd</color>
     <color name="black">#000</color>
