Added operator picture

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -47,6 +47,7 @@
         app:urlSocketHost="@string/urlSocketHost"
         app:urlSocketNameSpace="@string/urlSocketNameSpace"
         app:urlUploadHost="@string/urlUploadHost"
-        app:urlUploadNameSpace="@string/urlUploadNameSpace" />
+        app:urlUploadNameSpace="@string/urlUploadNameSpace"
+        app:fileProviderAuthorities="@string/chat_file_provider_authorities" />
 
 </LinearLayout>
